@@ -18,6 +18,7 @@ package org.activiti.engine.impl.bpmn.deployer;
 import java.util.ArrayList;
 import java.util.List;
 
+import java.util.Objects;
 import org.activiti.bpmn.model.EventDefinition;
 import org.activiti.bpmn.model.FlowElement;
 import org.activiti.bpmn.model.Process;
@@ -39,13 +40,13 @@ import org.activiti.engine.impl.util.CollectionUtil;
 public class TimerManager {
 
   protected void removeObsoleteTimers(ProcessDefinitionEntity processDefinition) {
-    List<TimerJobEntity> jobsToDelete = null;
+    List<TimerJobEntity> jobsToDelete;
 
     if (processDefinition.getTenantId() != null && !ProcessEngineConfiguration.NO_TENANT_ID.equals(processDefinition.getTenantId())) {
-      jobsToDelete = Context.getCommandContext().getTimerJobEntityManager().findJobsByTypeAndProcessDefinitionKeyAndTenantId(
+      jobsToDelete = Objects.requireNonNull(Context.getCommandContext()).getTimerJobEntityManager().findJobsByTypeAndProcessDefinitionKeyAndTenantId(
           TimerStartEventJobHandler.TYPE, processDefinition.getKey(), processDefinition.getTenantId());
     } else {
-      jobsToDelete = Context.getCommandContext().getTimerJobEntityManager()
+      jobsToDelete = Objects.requireNonNull(Context.getCommandContext()).getTimerJobEntityManager()
           .findJobsByTypeAndProcessDefinitionKeyNoTenantId(TimerStartEventJobHandler.TYPE, processDefinition.getKey());
     }
 
@@ -57,7 +58,7 @@ public class TimerManager {
   }
 
   protected void scheduleTimers(ProcessDefinitionEntity processDefinition, Process process) {
-    JobManager jobManager = Context.getCommandContext().getJobManager();
+    JobManager jobManager = Objects.requireNonNull(Context.getCommandContext()).getJobManager();
     List<TimerJobEntity> timers = getTimerDeclarations(processDefinition, process);
     for (TimerJobEntity timer : timers) {
       jobManager.scheduleTimerJob(timer);
@@ -65,16 +66,14 @@ public class TimerManager {
   }
 
   protected List<TimerJobEntity> getTimerDeclarations(ProcessDefinitionEntity processDefinition, Process process) {
-    JobManager jobManager = Context.getCommandContext().getJobManager();
-    List<TimerJobEntity> timers = new ArrayList<TimerJobEntity>();
+    JobManager jobManager = Objects.requireNonNull(Context.getCommandContext()).getJobManager();
+    List<TimerJobEntity> timers = new ArrayList<>();
     if (process != null && CollectionUtil.isNotEmpty(process.getFlowElements())) {
       for (FlowElement element : process.getFlowElements()) {
-        if (element instanceof StartEvent) {
-          StartEvent startEvent = (StartEvent) element;
+        if (element instanceof StartEvent startEvent) {
           if (CollectionUtil.isNotEmpty(startEvent.getEventDefinitions())) {
-            EventDefinition eventDefinition = startEvent.getEventDefinitions().get(0);
-            if (eventDefinition instanceof TimerEventDefinition) {
-              TimerEventDefinition timerEventDefinition = (TimerEventDefinition) eventDefinition;
+            EventDefinition eventDefinition = startEvent.getEventDefinitions().getFirst();
+            if (eventDefinition instanceof TimerEventDefinition timerEventDefinition) {
               TimerJobEntity timerJob = jobManager.createTimerJob(timerEventDefinition, false, null, TimerStartEventJobHandler.TYPE,
                   TimerEventHandler.createConfiguration(startEvent.getId(), timerEventDefinition.getEndDate(), timerEventDefinition.getCalendarName()));
 
