@@ -39,17 +39,17 @@ public class TaskAssignmentExtensionsTest extends PluggableActivitiTestCase {
   private static final List<String> KERMITSGROUPS = asList("management","accountancy");
 
   private static final String GONZO = "gonzo";
-  private static final List<String> GONZOSGROUPS = asList();
+  private static final List<String> GONZOSGROUPS = List.of();
 
   private static final String FOZZIE = "fozzie";
-  private static final List<String> FOZZIESGROUPS = asList("management");
+  private static final List<String> FOZZIESGROUPS = List.of("management");
 
   @Deployment
   public void testAssigneeExtension() {
     runtimeService.startProcessInstanceByKey("assigneeExtension");
     List<Task> tasks = taskService.createTaskQuery().taskAssignee(KERMIT).list();
     assertThat(tasks).hasSize(1);
-    assertThat(tasks.get(0).getName()).isEqualTo("my task");
+    assertThat(tasks.getFirst().getName()).isEqualTo("my task");
   }
 
   public void testDuplicateAssigneeDeclaration() {
@@ -64,7 +64,7 @@ public class TaskAssignmentExtensionsTest extends PluggableActivitiTestCase {
     runtimeService.startProcessInstanceByKey("ownerExtension");
     List<Task> tasks = taskService.createTaskQuery().taskOwner(GONZO).list();
     assertThat(tasks).hasSize(1);
-    assertThat(tasks.get(0).getName()).isEqualTo("my task");
+    assertThat(tasks.getFirst().getName()).isEqualTo("my task");
   }
 
   @Deployment
@@ -84,11 +84,11 @@ public class TaskAssignmentExtensionsTest extends PluggableActivitiTestCase {
     // kermit is a member of the two candidate groups
     List<Task> tasks = taskService.createTaskQuery().taskCandidateUser(KERMIT,KERMITSGROUPS).list();
     assertThat(tasks).hasSize(1);
-    assertThat(tasks.get(0).getName()).isEqualTo("make profit");
+    assertThat(tasks.getFirst().getName()).isEqualTo("make profit");
 
     tasks = taskService.createTaskQuery().taskCandidateUser(FOZZIE,FOZZIESGROUPS).list();
     assertThat(tasks).hasSize(1);
-    assertThat(tasks.get(0).getName()).isEqualTo("make profit");
+    assertThat(tasks.getFirst().getName()).isEqualTo("make profit");
 
     // Test the task query find-by-candidate-group operation
     TaskQuery query = taskService.createTaskQuery();
